# soft65c02

./: .gitignore  Cargo.toml
.cursor/rules/: soft65c02.mdc
soft65c02_graphics/: Cargo.toml  README.md
soft65c02_graphics/examples/game_of_life/: .gitignore  compile.sh  game_of_life_pixels.rs  gol.s  min_crt0.s
soft65c02_graphics/examples/gfx_demo/: README.md  game.rs  game.s  hilbert.rs  sfc.rs
soft65c02_graphics/src/: lib.rs  pixels_backend.rs
soft65c02_lib/: Cargo.toml
soft65c02_lib/src/: addressing_mode.rs  lib.rs  processing_unit.rs  registers.rs
soft65c02_lib/src/cpu_instruction/: cpu_instruction.rs
soft65c02_lib/src/memory/: memory_stack.rs  mod.rs  ram.rs  rom.rs
soft65c02_mcp/: Cargo.toml
soft65c02_mcp/agents/: AGENTS.md  CLAUDE.md.example  README.md  cursor-mcp.cargo-run.json.example  cursor-mcp.json.example  rules-soft65c02-mcp.example.mdc
soft65c02_mcp/src/: main.rs
soft65c02_mcp/tests/: mcp_stdio_roundtrip.rs
soft65c02_tester/: Cargo.toml  cheat_sheet.md  documentation.md  rules.pest
soft65c02_tester/src/: atari_binary.rs  commands.rs  disassembler.rs  displayer.rs  executor.rs  lib.rs  main.rs  pest_parser.rs  session_checkpoint.rs  symbols.rs  until_condition.rs  utils.rs
soft65c02_tester/tests/: test_registers.txt
soft65c02_unit/: Cargo.toml  README.md
soft65c02_unit/examples/simple_test/base_configs/: atari.yaml  config_min_atari.cfg
soft65c02_unit/examples/simple_test/src/: fn_under_test.s  test_runner.s
soft65c02_unit/examples/simple_test/tests/: my_test.txt  my_test.yaml
soft65c02_unit/src/: compiler.rs  config.rs  executor.rs  filesystem.rs  lib.rs  main.rs  runner.rs
soft65c02_unit/src/compiler/: cc65.rs
