[package]
name = "soft65c02_graphics"
version = "1.0.0-alpha2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soft65c02_lib = { path = "../soft65c02_lib" }
minifb = { version = "0.15.1", optional = true }
pixels = { version = "0.13", optional = true }
winit = { version = "0.28", optional = true }

[features]
default = ["minifb-backend"]
minifb-backend = ["minifb"]
pixels-backend = ["pixels", "winit"]

[[example]]
name = "minifb"
path = "examples/minifb.rs"
required-features = ["minifb-backend"]

[[example]]
name = "pixels"
path = "examples/pixels.rs"
required-features = ["pixels-backend"] 