[package]
name = "soft65c02_lib"
version = "1.0.0-alpha2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
range-map   = "0.1.5"
hex         = "0.4.0"
rand        = "0.7.3"
