[package]
name = "soft65c02_mcp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
rmcp = { version = "1.6", features = ["server", "transport-io", "macros", "schemars"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
soft65c02_tester = { path = "../soft65c02_tester" }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
