[package]
name = "soft65c02_tester"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
pest = "2.8.6"
pest_derive = "2.8.6"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
soft65c02_lib = { path = "../soft65c02_lib" }

[dev-dependencies]
tempfile = "3.27.0"
