[package]
name = "soft65c02_unit"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
clap = { version = "4.6.1", features = ["derive"] }
tempfile = "3.27.0"
regex = "1.12.3"

[[bin]]
name = "soft65c02_unit"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
